--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                             <p>Product Designer</p>
                             <div class="social-networks">
                                 <ul class="networks-list">
-                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
-                                        <a href="#">
+                                    <li class="item">
+                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#icon-instagram-blue"></use>
@@ -150,8 +150,8 @@
                                             </div>
                                         </a>
                                     </li>
-                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
-                                        <a href="#">
+                                    <li class="item">
+                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#icon-twitter"></use>
@@ -159,8 +159,8 @@
                                             </div>
                                         </a>
                                     </li>
-                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
-                                        <a href="#">
+                                    <li class="item">
+                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#icon-facebook"></use>
@@ -168,8 +168,8 @@
                                             </div>
                                         </a>
                                     </li>
-                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
-                                        <a href="#">
+                                    <li class="item">
+                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#icon-linkedin"></use>
@@ -190,8 +190,8 @@
                             <p>Frontend Developer</p>
                             <div class="social-networks">
                                 <ul class="networks-list">
-                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
-                                        <a href="#">
+                                    <li class="item">
+                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#icon-instagram-blue"></use>
@@ -199,8 +199,8 @@
                                             </div>
                                         </a>
                                     </li>
-                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
-                                        <a href="#">
+                                    <li class="item">
+                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#icon-twitter"></use>
@@ -208,8 +208,8 @@
                                             </div>
                                         </a>
                                     </li>
-                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
-                                        <a href="#">
+                                    <li class="item">
+                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#icon-facebook"></use>
@@ -217,8 +217,8 @@
                                             </div>
                                         </a>
                                     </li>
-                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
-                                        <a href="#">
+                                    <li class="item">
+                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#icon-linkedin"></use>
@@ -239,8 +239,8 @@
                             <p>Marketing</p>
                             <div class="social-networks">
                                 <ul class="networks-list">
-                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
-                                        <a href="#">
+                                    <li class="item">
+                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#icon-instagram-blue"></use>
@@ -248,8 +248,8 @@
                                             </div>
                                         </a>
                                     </li>
-                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
-                                        <a href="#">
+                                    <li class="item">
+                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#icon-twitter"></use>
@@ -257,8 +257,8 @@
                                             </div>
                                         </a>
                                     </li>
-                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
-                                        <a href="#">
+                                    <li class="item">
+                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#icon-facebook"></use>
@@ -266,8 +266,8 @@
                                             </div>
                                         </a>
                                     </li>
-                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
-                                        <a href="#">
+                                    <li class="item">
+                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#icon-linkedin"></use>
@@ -288,8 +288,8 @@
                             <p>UI Designer</p>
                             <div class="social-networks">
                                 <ul class="networks-list">
-                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
-                                        <a href="#">
+                                    <li class="item">
+                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#icon-instagram-blue"></use>
@@ -297,8 +297,8 @@
                                             </div>
                                         </a>
                                     </li>
-                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
-                                        <a href="#">
+                                    <li class="item">
+                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#icon-twitter"></use>
@@ -306,8 +306,8 @@
                                             </div>
                                         </a>
                                     </li>
-                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
-                                        <a href="#">
+                                    <li class="item">
+                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#icon-facebook"></use>
@@ -315,8 +315,8 @@
                                             </div>
                                         </a>
                                     </li>
-                                    <li class="item" alt="" target="_blank" rel="noopener norefferer nofollow">
-                                        <a href="#">
+                                    <li class="item">
+                                        <a href="#" alt="" target="_blank" rel="noopener norefferer nofollow">
                                             <div class="network-svg">
                                                 <svg class="network-item">
                                                     <use href="./img/icons.svg#icon-linkedin"></use>
