--- a/portfolio.html
+++ b/portfolio.html
@@ -59,59 +59,85 @@
 
                 <div class="list-wrap">
                     <ul class="listing-content">
-                        <li class="item"><img src="./img/banking-app.jpg" alt="Banking App" width="360">
-                            <div class="portfolio-card">
-                                <h2 class="portfolio-title">Banking App Interface Concept</h2>
-                                <p>App</p>
+                        <li class="item">
+                            <div class="card">
+                                <img src="./img/banking-app.jpg" alt="Banking App" width="360">
+                                <div class="portfolio-descr">
+                                    <h2 class="portfolio-title">Banking App Interface Concept</h2>
+                                    <p class="portfolio-text">App</p>
+                                </div>
                             </div>
                         </li>
-                        <li class="item"><img src="./img/cashless-payment.jpg" alt="Cashless Payment" width="360">
-                            <div class="portfolio-card">
-                                <h2 class="portfolio-title">Cashless Payment</h2>
-                                <p>Marketing</p>
+                        <li class="item">
+                            <div class="card">
+                                <img src="./img/cashless-payment.jpg" alt="Cashless Payment" width="360">
+                                <div class="portfolio-descr">
+                                    <h2 class="portfolio-title">Cashless Payment</h2>
+                                    <p class="portfolio-text">Marketing</p>
+                                </div>
                             </div>
                         </li>
-                        <li class="item"><img src="./img/meditation-app.jpg" alt="Meditaion App" width="360">
-                            <div class="portfolio-card">
-                                <h2 class="portfolio-title">Meditaion App</h2>
-                                <p>App</p>
+                        <li class="item">
+                            <div class="card">
+                                <img src="./img/meditation-app.jpg" alt="Meditaion App" width="360">
+                                <div class="portfolio-descr">
+                                    <h2 class="portfolio-title">Meditaion App</h2>
+                                    <p class="portfolio-text">App</p>
+                                </div>
                             </div>
                         </li>
-                        <li class="item"><img src="./img/taxi-service.jpg" alt="Taxi Service" width="360">
-                            <div class="portfolio-card">
-                                <h2 class="portfolio-title">Taxi Service</h2>
-                                <p>Marketing</p>
+                        <li class="item">
+                            <div class="card">
+                                <img src="./img/taxi-service.jpg" alt="Taxi Service" width="360">
+                                <div class="portfolio-descr">
+                                    <h2 class="portfolio-title">Taxi Service</h2>
+                                    <p class="portfolio-text">Marketing</p>
+                                </div>
                             </div>
                         </li>
-                        <li class="item"><img src="./img/screen-illustration.jpg" alt="Screen Illustrations"
-                                width="360">
-                            <div class="portfolio-card">
-                                <h2 class="portfolio-title">Screen Illustrations</h2>
-                                <p>Design</p>
+                        <li class="item">
+                            <div class="card">
+                                <img src="./img/screen-illustration.jpg" alt="Screen Illustrations" width="360">
+                                <div class="portfolio-descr">
+                                    <h2 class="portfolio-title">Screen Illustrations</h2>
+                                    <p class="portfolio-text">Design</p>
+                                </div>
                             </div>
                         </li>
-                        <li class="item"><img src="./img/online-cources.jpg" alt="Online Courses" width="360">
-                            <div class="portfolio-card">
-                                <h2 class="portfolio-title">Online Courses</h2>
-                                <p>Markrting</p>
+                        <li class="item">
+                            <div class="card">
+                                <img src="./img/online-cources.jpg" alt="Online Courses" width="360">
+                                <div class="portfolio-descr">
+                                    <h2 class="portfolio-title">Online Courses</h2>
+                                    <p class="portfolio-text">Markrting</p>
+                                </div>
                             </div>
                         </li>
-                        <li class="item"><img src="./img/instagram-stories.jpg" alt="Instagram Stories" width="360">
-                            <div class="portfolio-card">
-                                <h2 class="portfolio-title">Instagram Stories Concept</h2>
-                                <p>Design</p>
+                        <li class="item">
+                            <div class="card">
+                                <img src="./img/instagram-stories.jpg" alt="Instagram Stories" width="360">
+                                <div class="portfolio-descr">
+                                    <h2 class="portfolio-title">Instagram Stories Concept</h2>
+                                    <p class="portfolio-text">Design</p>
+                                </div>
                             </div>
                         </li>
-                        <li class="item"><img src="./img/organic-food.jpg" alt="Organic Food" width="360">
-                            <div class="portfolio-card">
-                                <h2 class="portfolio-title">Organic Food</h2>
-                                <p>Web Site</p>
+                        <li class="item">
+                            <div class="card">
+                                <img src="./img/organic-food.jpg" alt="Organic Food" width="360">
+                                <div class="portfolio-descr">
+                                    <h2 class="portfolio-title">Organic Food</h2>
+                                    <p class="portfolio-text">Web Site</p>
+                                </div>
                             </div>
                         </li>
-                        <li class="item"><img src="./img/fresh-coffee.jpg" alt="Fresh Coffee" width="360">
-                            <div class="portfolio-card">
-                                <h2 class="portfolio-title">Fresh Coffee</h2>
-                                <p>Web Site</p>
+                        <li class="item">
+                            <div class="card">
+                                <img src="./img/fresh-coffee.jpg" alt="Fresh Coffee" width="360">
+                                <div class="portfolio-descr">
+                                    <h2 class="portfolio-title">Fresh Coffee</h2>
+                                    <p class="portfolio-text">Web Site</p>
+                                </div>
                             </div>
                         </li>
                     </ul>
